# ChemicalEquations

./: Cargo.toml  README.md  build.rs  data.db
src/: main.rs  matrix.rs
src/definitions/: element_data.rs  enums.rs  mod.rs
src/equation_parser/: error.rs  mod.rs  parser.rs  parser_basic.rs  parser_result.rs  parser_v3.rs  tokenizer.rs  utils.rs
src/formula_parser/: mod.rs  parser.rs  symbol_counter.rs
src/formula_tools/: error.rs  formatter.rs  mod.rs  molar_mass.rs  parser.rs  parser_result.rs  utils.rs
src/formula_tools/parser/: mod.rs  parse.rs  parser_error.rs  parser_result.rs  tokenizer.rs
